force-app/main/default/objects/Ring_Central_Auth_Extension__mdt/Ring_Central_Auth_Extension__mdt.object-meta.xml
<CustomObject>
    <label>Ring Central Auth Extension</label>
    <pluralLabel>Ring Central Auth Extensions</pluralLabel>
</CustomObject>