force-app/main/default/objects/Ring_Central_Auth_Extension__mdt/fields/DateFrom__c.field-meta.xml
<CustomField>
    <fullName>DateFrom__c</fullName>
    <description>Empty when we need the last day, formatted like 2024-06-06T00:00:00.000Z if we need use &quot;dateFrom&quot; property</description>
    <label>DateFrom</label>
    <length>255</length>
    <type>Text</type>
</CustomField>