force-app/main/default/objects/Ring_Central_Auth_Extension__mdt/fields/ExtensionIds__c.field-meta.xml
<CustomField>
    <fullName>ExtensionIds__c</fullName>
    <label>ExtensionIds</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>