force-app/main/default/objects/Ring_Central_Auth_Extension__mdt/fields/Token__c.field-meta.xml
<CustomField>
    <fullName>Token__c</fullName>
    <label>Token</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>